fixed text alignment

--- a/Site.css
+++ b/Site.css
@@ -1,17 +1,17 @@
 h1{
-margin: auto;
+text-align: center;
 font-family: Helvetica, Arial, Sans-Serif;
 }
 h2{
-  margin: auto;
+text-align: center;
   font-family: Helvetica, Arial, Sans-Serif;
 }
 h3{
-  margin: auto;
+text-align: center;
   font-family: Helvetica, Arial, Sans-Serif;
 }
 h4{
-  margin: auto;
+text-align: center;
   font-family: Helvetica, Arial, Sans-Serif;
 }
 
